<resources>

    <string name="app_name">Letter\'s War</string>
    <string name="tituloSplash">Letter\'s War</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="imagen_logo">imagen logo</string>
    <string name="nombreLogo">Letter\'s War</string>
    <string name="logo_de_la_app">logo de la app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_para_amigos">logo para amigos</string>
    <string name="mensaje_amigos">¡Hola! puedes elegir una de nuestras modalidades...</string>
    <string name="Crear_Partida">Crear Partida</string>
    <string name="Join_Partida">Unirse</string>
    <string name="sera_el_avatar_del_usuario">Sera el avatar del usuario</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="inicio">Inicio</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="mi_progreso">Mi progreso</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="about">About</string>
    <string name="presentacion1">Aprende y mejora</string>
    <string name="presentacion2">tu ortografía jugando</string>
    <string name="SoyNuevo">Soy Nuevo</string>
    <string name="tengoCuenta">Tengo Cuenta</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registrar1">Registrar</string>
    <string name="title_activity_registrar3">Selecciona tu avatar</string>

    <string name="login">Iniciar sesión</string>
    <string name="hint1">E-mail</string>
    <string name="hint2">Password</string>
    <string name="restablecer"><u>Restablecer contraseña</u> </string>
    <string name="stringAvatar">Edward Gómez</string>
    <string name="stringCorreoAvatar">edward25nov@gmail.com</string>
    <string name="Registrar1_txt">Bienvenido, ahora</string>
    <string name="Registrar11_txt">crearemos tu perfil</string>
    <string name="contenidoregistrar1">Con tu perfil podrás</string>
    <string name="contenidoregistrar2">guardar tu progreso</string>
    <string name="contenidoregistrar3">y continuar aprendiendo</string>

    <string name="crearperfil">Crear perfil</string>
    <string name="e_mail">E-mail</string>
    <string name="nuevo_avatarstr">Elegir avatar</string>
    <string name="continuar">CONTINUAR</string>

    <string name="leccion1">Lección 1</string>
    <string name="leccion2">Lección 2</string>
    <string name="leccion3">Lección 3</string>
    <string name="leccion4">Lección 4</string>
    <string name="leccion5">Lección 5</string>
    <string name="ayuda">Ayuda?</string>
    <string name="Rprogreso">Promedio de correctas:</string>
    <string name="nivel">Nivel</string>
    <string name="puntos">Puntos</string>
    <string name="guardar">Guardar</string>
</resources>
