<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/nav_progreso"
            android:icon="@drawable/progreso"
            android:title="@string/mi_progreso">
        </item>

    <group android:id="@+id/group_id">
        <item
            android:id="@+id/nav_Ayuda"
            android:icon="@drawable/about"
            android:title="@string/ayuda" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/cerrar"
            android:title="@string/cerrar_sesi_n" />
    </group>

</menu>
