<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:id="@+id/layoutDesplegable">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/sizeiconexpandible"
        android:layout_height="@dimen/sizeiconexpandible"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/avatar"
        android:contentDescription="@string/sera_el_avatar_del_usuario"
        android:adjustViewBounds="false"
        android:scaleType="fitStart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/stringAvatar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/txtNameUser" />

    <TextView
        android:id="@+id/txtCorreoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringCorreoAvatar" />

</LinearLayout>
