<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.edward.orthography.Login"
    android:background="@color/azul100">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPass"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textStyle="bold"
        android:hint="@string/hint2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="41dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:layout_below="@+id/txtPass"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnlogin"
            android:layout_marginTop="39dp"
            android:background="@drawable/bk_boton_plano"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_menu_send"
            android:focusable="false"
            tools:ignore="RtlHardcoded" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restablecer"
            android:id="@+id/btnRestablecer"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_weight="0.04"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Borderless"
            tools:ignore="InefficientWeight" />

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtPass"
        android:layout_alignEnd="@+id/txtPass"
        android:hint="@string/hint1"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textStyle="normal|bold" />

</RelativeLayout>
