<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.edward.orthography.Presentacion"
    android:background="@drawable/profesor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/layoutpptx">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presentacion1"
            android:id="@+id/txtpresentacion"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded"
            android:gravity="right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presentacion2"
            android:id="@+id/txtpresentacion2"
            android:layout_below="@+id/txtpresentacion"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutpptx"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="69dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/SoyNuevo"
            android:id="@+id/btnNuevaCuenta"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/bk_boton_juego"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/tengoCuenta"
            android:id="@+id/btnTengoCuenta"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/bk_boton_juego"
            android:layout_marginTop="46dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
